[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/robo32.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/pause_scene.gd" type="Script" id=3]

[node name="pause" type="Control"]
pause_mode = 2
margin_left = 10.0
margin_top = 100.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 14.0
margin_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 121.0
margin_bottom = 158.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 114.0
margin_bottom = 151.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 114.0
margin_bottom = 115.0

[node name="resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
text = "Resume"

[node name="restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 44.0
text = "Restart"

[node name="quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 114.0
margin_bottom = 68.0
text = "Quit"

[node name="scores" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 114.0
margin_bottom = 151.0

[node name="score" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/scores"]
margin_right = 114.0
margin_bottom = 14.0
text = "Score: "
align = 1

[node name="highcore" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/scores"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 32.0
text = "Highscore: "
align = 1
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
